commit translated contents

--- a/docs/visual-basic/misc/bc30012.md
+++ b/docs/visual-basic/misc/bc30012.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30012
 ms.assetid: 9d51f3be-d2c3-4918-a36d-0d9e9763e47b
-ms.openlocfilehash: 6907a8600886b6c8ca988a60ee83dc58ef07f2ab
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e8c022f70b335673403102d3fbfbcc06ba09dfe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636469"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366853"
 ---
 # <a name="if-block-must-end-with-a-matching-end-if"></a>Il blocco '#If' deve terminare con un oggetto '#End If' corrispondente
 `#If` è una direttiva di compilazione condizionale. Un blocco `#If` non viene terminato da una direttiva `#End If` .  
@@ -25,4 +25,4 @@ ms.locfileid: "64636469"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttive #If...Then...#Else](../../visual-basic/language-reference/directives/if-then-else-directives.md)
+- [#If... Direttive then... #Else](../language-reference/directives/if-then-else-directives.md)
