--- a/docs/visual-basic/misc/bc30019.md
+++ b/docs/visual-basic/misc/bc30019.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30019
 ms.assetid: 7f0c7bb9-8e81-44bf-acc5-80d9785708aa
-ms.openlocfilehash: d4df1fba95c26c4c66bdb604cd74d93a944ef3a2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 87972ed72014c2eeac0212fc6731fec8127ca988
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584183"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366710"
 ---
 # <a name="delegates-cannot-handle-events"></a>I delegati non possono gestire gli eventi
 Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto. Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .  
@@ -25,6 +25,6 @@ Un delegato è un tipo riferimento che punta a una routine condivisa o a una rou
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Selettori](../language-reference/statements/handles-clause.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
