--- a/docs/visual-basic/misc/bc30110.md
+++ b/docs/visual-basic/misc/bc30110.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo di struttura e non può essere usato come espressione"
+title: "' <typename> ' è un tipo di struttura e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30110
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30110
 ms.assetid: 7971ba3a-e5af-4de3-bc3e-80b06f7b30fd
-ms.openlocfilehash: acdaf1c0abdb1a9c347e6a3abbced25c4c18eaa9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4ecad3506b8d1cae983eb892c9255162292f6430
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642679"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366164"
 ---
-# <a name="typename-is-a-structure-type-and-cannot-be-used-as-an-expression"></a>'\<nomeTipo >' è un tipo di struttura e non può essere usato come espressione
+# <a name="typename-is-a-structure-type-and-cannot-be-used-as-an-expression"></a>' \<typename> ' è un tipo di struttura e non può essere usato come espressione
 Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione. Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .  
   
  **ID errore:** BC30110  
@@ -25,4 +25,4 @@ Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori ed espressioni](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [Operatori ed espressioni](../programming-guide/language-features/operators-and-expressions/index.md)
