--- a/docs/visual-basic/misc/bc30582.md
+++ b/docs/visual-basic/misc/bc30582.md
@@ -1,5 +1,5 @@
 ---
-title: L'operando 'SyncLock' non può essere di tipo '<typename>'perché'<typename>' non è un tipo riferimento
+title: L'operando 'SyncLock' non può essere di tipo '<typename>' perché '<typename>' non è un tipo di riferimento
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30582
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30582
 ms.assetid: 953aecf2-629a-4272-94bd-abf88f785e63
-ms.openlocfilehash: 349ee90dcd984b9d6aab3b1f8c2d91a93cacb334
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 023318d62a73679e46b7c09e80b48f65ee5e7ecf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620906"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369946"
 ---
-# <a name="synclock-operand-cannot-be-of-type-typename-because-typename-is-not-a-reference-type"></a>L'operando 'SyncLock' non può essere di tipo '\<nomeTipo >' perché '\<nomeTipo >' non è un tipo riferimento
+# <a name="synclock-operand-cannot-be-of-type-typename-because-typename-is-not-a-reference-type"></a>L'operando 'SyncLock' non può essere di tipo '\<typename>' perché '\<typename>' non è un tipo di riferimento
 L'istruzione `SyncLock` consente di sincronizzare le istruzioni in un'unica espressione evitando che più thread eseguano le stesse istruzioni contemporaneamente. Il tipo di espressione in un'istruzione `SyncLock` deve essere un tipo riferimento, ad esempio una classe, un modulo, un'interfaccia, una matrice o un delegato.  
   
  **ID errore:** BC30582  
@@ -25,4 +25,4 @@ L'istruzione `SyncLock` consente di sincronizzare le istruzioni in un'unica espr
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione SyncLock](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [Istruzione SyncLock](../language-reference/statements/synclock-statement.md)
