--- a/docs/visual-basic/misc/bc31129.md
+++ b/docs/visual-basic/misc/bc31129.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31129
 ms.assetid: 6e5c89fc-ca1d-4e8f-bf04-8af3e8b03a4b
-ms.openlocfilehash: 228238075f3c0e173a9489005fd920ffce12f05d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 387c3f2c55277a76b473040542b4ae04468cf3e2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585275"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366021"
 ---
 # <a name="raiseevent-is-already-declared"></a>'RaiseEvent' è già dichiarato
 In una dichiarazione di evento personalizzata sono visualizzate più dichiarazioni `RaiseEvent` . Una dichiarazione `RaiseEvent` dichiara una routine usata per generare l'evento.  
@@ -25,5 +25,5 @@ In una dichiarazione di evento personalizzata sono visualizzate più dichiarazio
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RaiseEvent](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RaiseEvent](../language-reference/statements/raiseevent-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
