--- a/docs/visual-basic/misc/bc2001.md
+++ b/docs/visual-basic/misc/bc2001.md
@@ -1,5 +1,5 @@
 ---
-title: File <filename> non è stato trovato
+title: Il file <filename> non è stato trovato
 ms.date: 07/20/2015
 f1_keywords:
 - bc2001
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2001
 ms.assetid: 1aa8fb26-9a48-4c27-9ff4-67cf1d423b57
-ms.openlocfilehash: 919656af13634aee9bf51aec5f9352fc87c57439
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1ff0cda89f1d78f0aa07b74a1af6aa260a0cd214
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658757"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367508"
 ---
-# <a name="file-filename-could-not-be-found"></a>File \<filename > non è stato trovato
+# <a name="file-filename-could-not-be-found"></a>Il file \<filename> non è stato trovato
 Non è stato possibile trovare il file specificato. È possibile che sia stato specificato un percorso del file errato.  
   
  **ID errore:** BC2001  
@@ -25,4 +25,4 @@ Non è stato possibile trovare il file specificato. È possibile che sia stato s
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Analizzare percorsi di file](../../visual-basic/developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
+- [Procedura: Analizzare percorsi di file](../developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
