--- a/docs/visual-basic/misc/bc2003.md
+++ b/docs/visual-basic/misc/bc2003.md
@@ -1,5 +1,5 @@
 ---
-title: File di risposta <filename> incluso più volte.
+title: Il file di risposta <filename> è incluso più volte
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2003
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2003
 ms.assetid: 05240edd-e753-453b-b831-569f669d94d2
-ms.openlocfilehash: 2f06271c514aee5dff050f29b9e141ad80979f5c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 26bf98b8d68da195fcdb0946d4497ec13a0ac0df
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658709"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367425"
 ---
-# <a name="response-file-filename-included-multiple-times"></a>File di risposta \<nomefile > è incluso più volte
+# <a name="response-file-filename-included-multiple-times"></a>Il file di risposta \<filename> è incluso più volte
 Un file di risposta è stato specificato più volte. I file di risposta contengono le opzioni del compilatore e i file di codice sorgente da compilare.  
   
  **ID errore:** BC2003  
@@ -25,4 +25,4 @@ Un file di risposta è stato specificato più volte. I file di risposta contengo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Opzioni del compilatore Visual Basic elencate per categoria](../../visual-basic/reference/command-line-compiler/compiler-options-listed-by-category.md)
+- [Opzioni del compilatore Visual Basic elencate per categoria](../reference/command-line-compiler/compiler-options-listed-by-category.md)
