--- a/docs/visual-basic/misc/bc30096.md
+++ b/docs/visual-basic/misc/bc30096.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30096
 ms.assetid: 1062a329-9364-4234-9175-4c70a51cb7ae
-ms.openlocfilehash: 51ea98b86fde5a3c682e24e91297f054e02a4af7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4e07513d7042516c71b860d3f22658d572696914
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935798"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370232"
 ---
 # <a name="exit-for-can-only-appear-inside-a-for-statement"></a>'Exit For' può trovarsi solo all'interno di un'istruzione 'For'
 Un'istruzione `Exit For` si verifica al di fuori di un ciclo `For` . `Exit For` è valido solo tra un'istruzione `For` o `For Each` e un'istruzione `Next` corrispondente.  
@@ -27,5 +27,5 @@ Un'istruzione `Exit For` si verifica al di fuori di un ciclo `For` . `Exit For` 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Istruzione For Each...Next](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Istruzione For Each...Next](../language-reference/statements/for-each-next-statement.md)
