--- a/docs/visual-basic/misc/bc30593.md
+++ b/docs/visual-basic/misc/bc30593.md
@@ -1,5 +1,5 @@
 ---
-title: Le variabili nei moduli non possono essere dichiarate '<specifier>'
+title: Le variabili nei moduli non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30593
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30593
 ms.assetid: 2500b776-7fa4-4272-8cc7-204593706651
-ms.openlocfilehash: 8a0ba37d3b1f1a4bb115d9f2d427b65ca65751e3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 914fd8a2c64de6cea5aedbaf0908781173ebe391
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369673"
 ---
-# <a name="variables-in-modules-cannot-be-declared-specifier"></a>Le variabili nei moduli non possono essere dichiarate '\<identificatore >'
+# <a name="variables-in-modules-cannot-be-declared-specifier"></a>Le variabili nei moduli non possono essere dichiarate ' \<specifier> '
 È stato usato un identificatore, ad esempio `MustInherit`, in una variabile di un'istruzione `Module` . Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.  
   
  **ID errore:** BC30593  
@@ -25,4 +25,4 @@ ms.locfileid: "64621152"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
