--- a/docs/visual-basic/misc/bc32021.md
+++ b/docs/visual-basic/misc/bc32021.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro ' <parametername>' in ' <methodname>' ha già un argomento omesso corrispondente
+title: Il parametro '<parametername>' in '<methodname>' contiene già un argomento omesso corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32021
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32021
 ms.assetid: f51d29ba-c5b3-4731-a426-4c5ba11b4e1f
-ms.openlocfilehash: 1a4e386d52d7f1699f8740d2044285f1d67f99d1
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 7aab1c62aa772ea28fc572daadc313cf4b3b3375
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352293"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365800"
 ---
-# <a name="parameter-parametername-in-methodname-already-has-a-matching-omitted-argument"></a>Il parametro ' \<parametername >' in ' \<methodname >' ha già un argomento omesso corrispondente
+# <a name="parameter-parametername-in-methodname-already-has-a-matching-omitted-argument"></a>Il parametro '\<parametername>' in '\<methodname>' contiene già un argomento omesso corrispondente
 Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione. Ad esempio:  
   
 ```vb  
@@ -32,4 +32,4 @@ Call ABC(6, , Y:=3)   ' Argument Y omitted by position, supplied by name.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
