--- a/docs/visual-basic/misc/bc32095.md
+++ b/docs/visual-basic/misc/bc32095.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32095
 ms.assetid: a47ad15a-2cfc-4d17-9012-27ba85b7d783
-ms.openlocfilehash: b3839c169a4b136204a151648d4ca4bf560ccdef
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: de405475823d9602a2f64d5f48f149588231621c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667506"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365345"
 ---
 # <a name="-unexpected"></a>'(' imprevisto
 '(' imprevisto. Non sono consentite matrici di tipi generici privi di istanze.  
@@ -29,5 +29,5 @@ ms.locfileid: "69667506"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
 - [Raccolte (Visual Basic)](../programming-guide/concepts/collections.md)
