--- a/docs/visual-basic/misc/bc36809.md
+++ b/docs/visual-basic/misc/bc36809.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36809
 ms.assetid: 560a3370-f24d-4ca3-93b1-39aabe13c238
-ms.openlocfilehash: 3ceebfa04420545db28a9e685643762abe65fc9e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cb00cf8507a9111ee1e5575c6714040c013f5d22
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614459"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369399"
 ---
 # <a name="xml-descendant-elements-cannot-be-selected-from-type-type"></a>Non è possibile selezionare elementi discendenti XML dal tipo 'type'
-È stato fatto riferimento a un elemento discendente XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`. Per altre informazioni, vedere [XML Descendant Axis Property](../../visual-basic/language-reference/xml-axis/xml-descendant-axis-property.md).  
+È stato fatto riferimento a un elemento discendente XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`. Per altre informazioni, vedere [XML Descendant Axis Property](../language-reference/xml-axis/xml-descendant-axis-property.md).  
   
 ```vb  
 ' Generates an error.  
@@ -26,7 +26,7 @@ Dim var = "sample text"...<childElement>
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se si fa riferimento a un elemento discendente di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`. Di seguito è riportato un esempio:  
+- Se si fa riferimento a un elemento discendente di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`. Di seguito è illustrato un esempio:  
   
 ```vb  
 Dim elem As XElement = <root>  
@@ -37,6 +37,6 @@ Dim var = elem...<child>
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Proprietà axis descendant XML](../../visual-basic/language-reference/xml-axis/xml-descendant-axis-property.md)
-- [Proprietà Axis XML](../../visual-basic/language-reference/xml-axis/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [XML Descendant Axis Property](../language-reference/xml-axis/xml-descendant-axis-property.md)
+- [Proprietà Axis XML](../language-reference/xml-axis/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
