commit bilingual contents

--- a/docs/visual-basic/misc/bc2000.md
+++ b/docs/visual-basic/misc/bc2000.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC2000
 ms.assetid: 82fdab51-eee0-488b-9f7e-a5c0c5c182ab
-ms.openlocfilehash: 1ed75979b8da46aeb7fa52c5f0c61d681720d459
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a3b3886031ab95ebb67718a1a7ea4b7b54d46626
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658769"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367512"
 ---
-# <a name="initialization-error"></a><span data-ttu-id="c6f44-102">Errore di inizializzazione</span><span class="sxs-lookup"><span data-stu-id="c6f44-102">Initialization error</span></span>
-<span data-ttu-id="c6f44-103">Errore durante l'inizializzazione del programma.</span><span class="sxs-lookup"><span data-stu-id="c6f44-103">An error occurred while initializing the program.</span></span> <span data-ttu-id="c6f44-104">Può essere dovuto all'annullamento di un'installazione in corso.</span><span class="sxs-lookup"><span data-stu-id="c6f44-104">This may be a result of canceling an installation while it is still in progress.</span></span>  
+# <a name="initialization-error"></a><span data-ttu-id="19b0b-102">Errore di inizializzazione</span><span class="sxs-lookup"><span data-stu-id="19b0b-102">Initialization error</span></span>
+<span data-ttu-id="19b0b-103">Errore durante l'inizializzazione del programma.</span><span class="sxs-lookup"><span data-stu-id="19b0b-103">An error occurred while initializing the program.</span></span> <span data-ttu-id="19b0b-104">Può essere dovuto all'annullamento di un'installazione in corso.</span><span class="sxs-lookup"><span data-stu-id="19b0b-104">This may be a result of canceling an installation while it is still in progress.</span></span>  
   
- <span data-ttu-id="c6f44-105">**ID errore:** BC2000</span><span class="sxs-lookup"><span data-stu-id="c6f44-105">**Error ID:** BC2000</span></span>  
+ <span data-ttu-id="19b0b-105">**ID errore:** BC2000</span><span class="sxs-lookup"><span data-stu-id="19b0b-105">**Error ID:** BC2000</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c6f44-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c6f44-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="19b0b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="19b0b-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c6f44-107">Ripetere l'installazione.</span><span class="sxs-lookup"><span data-stu-id="c6f44-107">Reattempt the installation.</span></span>  
+- <span data-ttu-id="19b0b-107">Ripetere l'installazione.</span><span class="sxs-lookup"><span data-stu-id="19b0b-107">Reattempt the installation.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c6f44-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c6f44-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="19b0b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="19b0b-108">See also</span></span>
 
-- [<span data-ttu-id="c6f44-109">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="c6f44-109">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+- [<span data-ttu-id="19b0b-109">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="19b0b-109">Error Types</span></span>](../programming-guide/language-features/error-types.md)
