--- a/docs/visual-basic/misc/bc30019.md
+++ b/docs/visual-basic/misc/bc30019.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30019
 ms.assetid: 7f0c7bb9-8e81-44bf-acc5-80d9785708aa
-ms.openlocfilehash: d4df1fba95c26c4c66bdb604cd74d93a944ef3a2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 87972ed72014c2eeac0212fc6731fec8127ca988
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584183"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366710"
 ---
-# <a name="delegates-cannot-handle-events"></a><span data-ttu-id="9477f-102">I delegati non possono gestire gli eventi</span><span class="sxs-lookup"><span data-stu-id="9477f-102">Delegates cannot handle events</span></span>
-<span data-ttu-id="9477f-103">Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto.</span><span class="sxs-lookup"><span data-stu-id="9477f-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="9477f-104">Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .</span><span class="sxs-lookup"><span data-stu-id="9477f-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
+# <a name="delegates-cannot-handle-events"></a><span data-ttu-id="81b6c-102">I delegati non possono gestire gli eventi</span><span class="sxs-lookup"><span data-stu-id="81b6c-102">Delegates cannot handle events</span></span>
+<span data-ttu-id="81b6c-103">Un delegato è un tipo riferimento che punta a una routine condivisa o a una routine di istanza su un oggetto.</span><span class="sxs-lookup"><span data-stu-id="81b6c-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="81b6c-104">Dato che la routine a cui punta può essere modificata mediante assegnazione, l'istruzione `Delegate` non può supportare le clausole `Handles` o `Implements` .</span><span class="sxs-lookup"><span data-stu-id="81b6c-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
   
- <span data-ttu-id="9477f-105">**ID errore:** BC30019</span><span class="sxs-lookup"><span data-stu-id="9477f-105">**Error ID:** BC30019</span></span>  
+ <span data-ttu-id="81b6c-105">**ID errore:** BC30019</span><span class="sxs-lookup"><span data-stu-id="81b6c-105">**Error ID:** BC30019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9477f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9477f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="81b6c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81b6c-106">To correct this error</span></span>  
   
-- <span data-ttu-id="9477f-107">Rimuovere la clausola `Handles` dall'istruzione `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="9477f-107">Remove the `Handles` clause from the `Delegate` statement.</span></span>  
+- <span data-ttu-id="81b6c-107">Rimuovere la clausola `Handles` dall'istruzione `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="81b6c-107">Remove the `Handles` clause from the `Delegate` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9477f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9477f-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="81b6c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81b6c-108">See also</span></span>
 
-- [<span data-ttu-id="9477f-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="9477f-109">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="9477f-110">Handles</span><span class="sxs-lookup"><span data-stu-id="9477f-110">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)
-- [<span data-ttu-id="9477f-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="9477f-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="81b6c-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="81b6c-109">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="81b6c-110">Selettori</span><span class="sxs-lookup"><span data-stu-id="81b6c-110">Handles</span></span>](../language-reference/statements/handles-clause.md)
+- [<span data-ttu-id="81b6c-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="81b6c-111">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
