--- a/docs/visual-basic/misc/bc32095.md
+++ b/docs/visual-basic/misc/bc32095.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32095
 ms.assetid: a47ad15a-2cfc-4d17-9012-27ba85b7d783
-ms.openlocfilehash: b3839c169a4b136204a151648d4ca4bf560ccdef
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: de405475823d9602a2f64d5f48f149588231621c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667506"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365345"
 ---
-# <a name="-unexpected"></a><span data-ttu-id="fa3b3-102">'(' imprevisto</span><span class="sxs-lookup"><span data-stu-id="fa3b3-102">'(' unexpected</span></span>
-<span data-ttu-id="fa3b3-103">'(' imprevisto.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-103">'(' unexpected.</span></span> <span data-ttu-id="fa3b3-104">Non sono consentite matrici di tipi generici privi di istanze.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-104">Arrays of uninstantiated generic types are not allowed.</span></span>  
+# <a name="-unexpected"></a><span data-ttu-id="fe607-102">'(' imprevisto</span><span class="sxs-lookup"><span data-stu-id="fe607-102">'(' unexpected</span></span>
+<span data-ttu-id="fe607-103">'(' imprevisto.</span><span class="sxs-lookup"><span data-stu-id="fe607-103">'(' unexpected.</span></span> <span data-ttu-id="fe607-104">Non sono consentite matrici di tipi generici privi di istanze.</span><span class="sxs-lookup"><span data-stu-id="fe607-104">Arrays of uninstantiated generic types are not allowed.</span></span>  
   
- <span data-ttu-id="fa3b3-105">Visual Basic non può compilare una matrice a meno che non sia di un tipo di dati specifico.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-105">Visual Basic cannot compile an array unless it is of a specific data type.</span></span> <span data-ttu-id="fa3b3-106">Non è possibile usare un parametro del tipo di dati di un tipo generico come tipo di dati di una matrice.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-106">You cannot use a data-type parameter of a generic type as the data type of an array.</span></span>  
+ <span data-ttu-id="fe607-105">Visual Basic non può compilare una matrice a meno che non sia di un tipo di dati specifico.</span><span class="sxs-lookup"><span data-stu-id="fe607-105">Visual Basic cannot compile an array unless it is of a specific data type.</span></span> <span data-ttu-id="fe607-106">Non è possibile usare un parametro del tipo di dati di un tipo generico come tipo di dati di una matrice.</span><span class="sxs-lookup"><span data-stu-id="fe607-106">You cannot use a data-type parameter of a generic type as the data type of an array.</span></span>  
   
- <span data-ttu-id="fa3b3-107">**ID errore:** BC32095</span><span class="sxs-lookup"><span data-stu-id="fa3b3-107">**Error ID:** BC32095</span></span>  
+ <span data-ttu-id="fe607-107">**ID errore:** BC32095</span><span class="sxs-lookup"><span data-stu-id="fe607-107">**Error ID:** BC32095</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fa3b3-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fa3b3-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fe607-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fe607-108">To correct this error</span></span>  
   
-- <span data-ttu-id="fa3b3-109">Se è necessario usare una matrice, è necessario dichiararla come un tipo di dati specifico.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-109">If you need to use an array, you must declare it to be of a specific data type.</span></span> <span data-ttu-id="fa3b3-110">Non è possibile usare un parametro del tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-110">You cannot use a data-type parameter.</span></span>  
+- <span data-ttu-id="fe607-109">Se è necessario usare una matrice, è necessario dichiararla come un tipo di dati specifico.</span><span class="sxs-lookup"><span data-stu-id="fe607-109">If you need to use an array, you must declare it to be of a specific data type.</span></span> <span data-ttu-id="fe607-110">Non è possibile usare un parametro del tipo di dati.</span><span class="sxs-lookup"><span data-stu-id="fe607-110">You cannot use a data-type parameter.</span></span>  
   
-- <span data-ttu-id="fa3b3-111">Se è necessario un gruppo di elementi del tipo di dati da fornire per un parametro del tipo di dati, è necessario usare una raccolta invece di una matrice.</span><span class="sxs-lookup"><span data-stu-id="fa3b3-111">If you need a group of elements of the data type that is to be supplied for a data-type parameter, you must use a collection instead of an array.</span></span>  
+- <span data-ttu-id="fe607-111">Se è necessario un gruppo di elementi del tipo di dati da fornire per un parametro del tipo di dati, è necessario usare una raccolta invece di una matrice.</span><span class="sxs-lookup"><span data-stu-id="fe607-111">If you need a group of elements of the data type that is to be supplied for a data-type parameter, you must use a collection instead of an array.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fa3b3-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fa3b3-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fe607-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fe607-112">See also</span></span>
 
-- [<span data-ttu-id="fa3b3-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="fa3b3-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="fa3b3-114">Raccolte (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="fa3b3-114">Collections (Visual Basic)</span></span>](../programming-guide/concepts/collections.md)
+- [<span data-ttu-id="fe607-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="fe607-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="fe607-114">Raccolte (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="fe607-114">Collections (Visual Basic)</span></span>](../programming-guide/concepts/collections.md)
