--- a/docs/visual-basic/misc/bc2001.md
+++ b/docs/visual-basic/misc/bc2001.md
@@ -1,5 +1,5 @@
 ---
-title: File <filename> non è stato trovato
+title: Il file <filename> non è stato trovato
 ms.date: 07/20/2015
 f1_keywords:
 - bc2001
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC2001
 ms.assetid: 1aa8fb26-9a48-4c27-9ff4-67cf1d423b57
-ms.openlocfilehash: 919656af13634aee9bf51aec5f9352fc87c57439
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1ff0cda89f1d78f0aa07b74a1af6aa260a0cd214
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658757"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367508"
 ---
-# <a name="file-filename-could-not-be-found"></a><span data-ttu-id="b6f2a-102">File \<filename > non è stato trovato</span><span class="sxs-lookup"><span data-stu-id="b6f2a-102">File \<filename> could not be found</span></span>
-<span data-ttu-id="b6f2a-103">Non è stato possibile trovare il file specificato.</span><span class="sxs-lookup"><span data-stu-id="b6f2a-103">The specified file could not be located.</span></span> <span data-ttu-id="b6f2a-104">È possibile che sia stato specificato un percorso del file errato.</span><span class="sxs-lookup"><span data-stu-id="b6f2a-104">This may be a result of supplying an incorrect file path.</span></span>  
+# <a name="file-filename-could-not-be-found"></a><span data-ttu-id="8ba1a-102">Il file \<filename> non è stato trovato</span><span class="sxs-lookup"><span data-stu-id="8ba1a-102">File \<filename> could not be found</span></span>
+<span data-ttu-id="8ba1a-103">Non è stato possibile trovare il file specificato.</span><span class="sxs-lookup"><span data-stu-id="8ba1a-103">The specified file could not be located.</span></span> <span data-ttu-id="8ba1a-104">È possibile che sia stato specificato un percorso del file errato.</span><span class="sxs-lookup"><span data-stu-id="8ba1a-104">This may be a result of supplying an incorrect file path.</span></span>  
   
- <span data-ttu-id="b6f2a-105">**ID errore:** BC2001</span><span class="sxs-lookup"><span data-stu-id="b6f2a-105">**Error ID:** BC2001</span></span>  
+ <span data-ttu-id="8ba1a-105">**ID errore:** BC2001</span><span class="sxs-lookup"><span data-stu-id="8ba1a-105">**Error ID:** BC2001</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b6f2a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b6f2a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8ba1a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8ba1a-106">To correct this error</span></span>  
   
-- <span data-ttu-id="b6f2a-107">Verificare che il nome e il percorso del file siano corretti.</span><span class="sxs-lookup"><span data-stu-id="b6f2a-107">Check that the file name and path are correct.</span></span>  
+- <span data-ttu-id="8ba1a-107">Verificare che il nome e il percorso del file siano corretti.</span><span class="sxs-lookup"><span data-stu-id="8ba1a-107">Check that the file name and path are correct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b6f2a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b6f2a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8ba1a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8ba1a-108">See also</span></span>
 
-- [<span data-ttu-id="b6f2a-109">Procedura: Analizzare percorsi di file</span><span class="sxs-lookup"><span data-stu-id="b6f2a-109">How to: Parse File Paths</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
+- [<span data-ttu-id="8ba1a-109">Procedura: Analizzare percorsi di file</span><span class="sxs-lookup"><span data-stu-id="8ba1a-109">How to: Parse File Paths</span></span>](../developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
