--- a/docs/visual-basic/misc/bc2003.md
+++ b/docs/visual-basic/misc/bc2003.md
@@ -1,5 +1,5 @@
 ---
-title: File di risposta <filename> incluso più volte.
+title: Il file di risposta <filename> è incluso più volte
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2003
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC2003
 ms.assetid: 05240edd-e753-453b-b831-569f669d94d2
-ms.openlocfilehash: 2f06271c514aee5dff050f29b9e141ad80979f5c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 26bf98b8d68da195fcdb0946d4497ec13a0ac0df
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658709"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367425"
 ---
-# <a name="response-file-filename-included-multiple-times"></a><span data-ttu-id="de07a-102">File di risposta \<nomefile > è incluso più volte</span><span class="sxs-lookup"><span data-stu-id="de07a-102">Response file \<filename> included multiple times</span></span>
-<span data-ttu-id="de07a-103">Un file di risposta è stato specificato più volte.</span><span class="sxs-lookup"><span data-stu-id="de07a-103">A response file has been specified more than once.</span></span> <span data-ttu-id="de07a-104">I file di risposta contengono le opzioni del compilatore e i file di codice sorgente da compilare.</span><span class="sxs-lookup"><span data-stu-id="de07a-104">Response files contain compiler options and source code files to compile.</span></span>  
+# <a name="response-file-filename-included-multiple-times"></a><span data-ttu-id="50a4e-102">Il file di risposta \<filename> è incluso più volte</span><span class="sxs-lookup"><span data-stu-id="50a4e-102">Response file \<filename> included multiple times</span></span>
+<span data-ttu-id="50a4e-103">Un file di risposta è stato specificato più volte.</span><span class="sxs-lookup"><span data-stu-id="50a4e-103">A response file has been specified more than once.</span></span> <span data-ttu-id="50a4e-104">I file di risposta contengono le opzioni del compilatore e i file di codice sorgente da compilare.</span><span class="sxs-lookup"><span data-stu-id="50a4e-104">Response files contain compiler options and source code files to compile.</span></span>  
   
- <span data-ttu-id="de07a-105">**ID errore:** BC2003</span><span class="sxs-lookup"><span data-stu-id="de07a-105">**Error ID:** BC2003</span></span>  
+ <span data-ttu-id="50a4e-105">**ID errore:** BC2003</span><span class="sxs-lookup"><span data-stu-id="50a4e-105">**Error ID:** BC2003</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="de07a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="de07a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="50a4e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="50a4e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="de07a-107">Rimuovere gli identificatori dei file di risposta ridondanti.</span><span class="sxs-lookup"><span data-stu-id="de07a-107">Remove redundant response file specifiers.</span></span>  
+- <span data-ttu-id="50a4e-107">Rimuovere gli identificatori dei file di risposta ridondanti.</span><span class="sxs-lookup"><span data-stu-id="50a4e-107">Remove redundant response file specifiers.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="de07a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="de07a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="50a4e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="50a4e-108">See also</span></span>
 
-- [<span data-ttu-id="de07a-109">Opzioni del compilatore Visual Basic elencate per categoria</span><span class="sxs-lookup"><span data-stu-id="de07a-109">Visual Basic Compiler Options Listed by Category</span></span>](../../visual-basic/reference/command-line-compiler/compiler-options-listed-by-category.md)
+- [<span data-ttu-id="50a4e-109">Opzioni del compilatore Visual Basic elencate per categoria</span><span class="sxs-lookup"><span data-stu-id="50a4e-109">Visual Basic Compiler Options Listed by Category</span></span>](../reference/command-line-compiler/compiler-options-listed-by-category.md)
