--- a/docs/visual-basic/misc/bc30012.md
+++ b/docs/visual-basic/misc/bc30012.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30012
 ms.assetid: 9d51f3be-d2c3-4918-a36d-0d9e9763e47b
-ms.openlocfilehash: 6907a8600886b6c8ca988a60ee83dc58ef07f2ab
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e8c022f70b335673403102d3fbfbcc06ba09dfe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636469"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366853"
 ---
-# <a name="if-block-must-end-with-a-matching-end-if"></a><span data-ttu-id="bf399-102">Il blocco '#If' deve terminare con un oggetto '#End If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="bf399-102">'#If' block must end with a matching '#End If'</span></span>
-<span data-ttu-id="bf399-103">`#If` è una direttiva di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="bf399-103">`#If` is a conditional compilation directive.</span></span> <span data-ttu-id="bf399-104">Un blocco `#If` non viene terminato da una direttiva `#End If` .</span><span class="sxs-lookup"><span data-stu-id="bf399-104">An `#If` block is not terminated by an `#End If` directive.</span></span>  
+# <a name="if-block-must-end-with-a-matching-end-if"></a><span data-ttu-id="ff877-102">Il blocco '#If' deve terminare con un oggetto '#End If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ff877-102">'#If' block must end with a matching '#End If'</span></span>
+<span data-ttu-id="ff877-103">`#If` è una direttiva di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="ff877-103">`#If` is a conditional compilation directive.</span></span> <span data-ttu-id="ff877-104">Un blocco `#If` non viene terminato da una direttiva `#End If` .</span><span class="sxs-lookup"><span data-stu-id="ff877-104">An `#If` block is not terminated by an `#End If` directive.</span></span>  
   
- <span data-ttu-id="bf399-105">**ID errore:** BC30012</span><span class="sxs-lookup"><span data-stu-id="bf399-105">**Error ID:** BC30012</span></span>  
+ <span data-ttu-id="ff877-105">**ID errore:** BC30012</span><span class="sxs-lookup"><span data-stu-id="ff877-105">**Error ID:** BC30012</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bf399-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bf399-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ff877-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ff877-106">To correct this error</span></span>  
   
-- <span data-ttu-id="bf399-107">Aggiungere una direttiva `#End If` alla fine del blocco di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="bf399-107">Add an `#End If` directive to the end of the conditional compilation block.</span></span>  
+- <span data-ttu-id="ff877-107">Aggiungere una direttiva `#End If` alla fine del blocco di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="ff877-107">Add an `#End If` directive to the end of the conditional compilation block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bf399-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bf399-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ff877-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ff877-108">See also</span></span>
 
-- [<span data-ttu-id="bf399-109">Direttive #If...Then...#Else</span><span class="sxs-lookup"><span data-stu-id="bf399-109">#If...Then...#Else Directives</span></span>](../../visual-basic/language-reference/directives/if-then-else-directives.md)
+- [<span data-ttu-id="ff877-109">#If... Direttive then... #Else</span><span class="sxs-lookup"><span data-stu-id="ff877-109">#If...Then...#Else Directives</span></span>](../language-reference/directives/if-then-else-directives.md)
