--- a/docs/visual-basic/misc/bc30013.md
+++ b/docs/visual-basic/misc/bc30013.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30013
 ms.assetid: 8fe2d23c-8b8f-46d8-90f2-7f8857ea43bb
-ms.openlocfilehash: 88e4de9458ab2596486c6aeb7c0e61455dad73d1
-ms.sourcegitcommit: 68653db98c5ea7744fd438710248935f70020dfb
+ms.openlocfilehash: d9356860aae0355d9141f1c36464b84c982046da
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69935231"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366840"
 ---
-# <a name="elseif-else-or-end-if-must-be-preceded-by-a-matching-if"></a><span data-ttu-id="2a519-102">'#ElseIf', '#Else' o '#End If' deve essere preceduto da un '#If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="2a519-102">'#ElseIf', '#Else', or '#End If' must be preceded by a matching '#If'</span></span>
-<span data-ttu-id="2a519-103">`#ElseIf`, `#Else`e `#End If` sono direttive di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="2a519-103">`#ElseIf`, `#Else`, and `#End If` are conditional compilation directives.</span></span> <span data-ttu-id="2a519-104">L'oggetto `#ElseIf`, `#Else`o `#End If` non è preceduto da una direttiva `#If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="2a519-104">The `#ElseIf`, `#Else`, or `#End If` is not preceded by a corresponding `#If` directive.</span></span>  
+# <a name="elseif-else-or-end-if-must-be-preceded-by-a-matching-if"></a><span data-ttu-id="d7755-102">'#ElseIf', '#Else' o '#End If' deve essere preceduto da un '#If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="d7755-102">'#ElseIf', '#Else', or '#End If' must be preceded by a matching '#If'</span></span>
+<span data-ttu-id="d7755-103">`#ElseIf`, `#Else`e `#End If` sono direttive di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="d7755-103">`#ElseIf`, `#Else`, and `#End If` are conditional compilation directives.</span></span> <span data-ttu-id="d7755-104">L'oggetto `#ElseIf`, `#Else`o `#End If` non è preceduto da una direttiva `#If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="d7755-104">The `#ElseIf`, `#Else`, or `#End If` is not preceded by a corresponding `#If` directive.</span></span>  
   
- <span data-ttu-id="2a519-105">**ID errore:** BC30013</span><span class="sxs-lookup"><span data-stu-id="2a519-105">**Error ID:** BC30013</span></span>  
+ <span data-ttu-id="d7755-105">**ID errore:** BC30013</span><span class="sxs-lookup"><span data-stu-id="d7755-105">**Error ID:** BC30013</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2a519-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2a519-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d7755-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d7755-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="2a519-107">Verificare che l'oggetto `#If` previsto non sia separato dalla clausola interessata mediante un blocco di compilazione condizionale o un oggetto `#End If`posizionato in modo non corretto.</span><span class="sxs-lookup"><span data-stu-id="2a519-107">Check that the intended `#If` is not separated from the clause in question by an intervening conditional compilation block or an incorrectly placed `#End If`.</span></span>  
+1. <span data-ttu-id="d7755-107">Verificare che l'oggetto `#If` previsto non sia separato dalla clausola interessata mediante un blocco di compilazione condizionale o un oggetto `#End If`posizionato in modo non corretto.</span><span class="sxs-lookup"><span data-stu-id="d7755-107">Check that the intended `#If` is not separated from the clause in question by an intervening conditional compilation block or an incorrectly placed `#End If`.</span></span>  
   
     > [!NOTE]
-    > <span data-ttu-id="2a519-108">È consentito un solo oggetto `#Else` in ogni blocco `#If` , quindi due direttive `#Else` successive causano questo errore.</span><span class="sxs-lookup"><span data-stu-id="2a519-108">Only one `#Else` is permitted in each `#If` block, so two successive `#Else` directives cause this error.</span></span>  
+    > <span data-ttu-id="d7755-108">È consentito un solo oggetto `#Else` in ogni blocco `#If` , quindi due direttive `#Else` successive causano questo errore.</span><span class="sxs-lookup"><span data-stu-id="d7755-108">Only one `#Else` is permitted in each `#If` block, so two successive `#Else` directives cause this error.</span></span>  
   
-2. <span data-ttu-id="2a519-109">Verificare che una direttiva `#` precedente sia preceduta da `#If` .</span><span class="sxs-lookup"><span data-stu-id="2a519-109">Check that the leading `#` is not missing from an earlier `#If` directive.</span></span>  
+2. <span data-ttu-id="d7755-109">Verificare che una direttiva `#` precedente sia preceduta da `#If` .</span><span class="sxs-lookup"><span data-stu-id="d7755-109">Check that the leading `#` is not missing from an earlier `#If` directive.</span></span>  
   
-3. <span data-ttu-id="2a519-110">Se tutti gli altri elementi sono in ordine, aggiungere una direttiva `#If` all'inizio del blocco di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="2a519-110">If everything else is in order, add an `#If` directive to the beginning of the conditional compilation block.</span></span>  
+3. <span data-ttu-id="d7755-110">Se tutti gli altri elementi sono in ordine, aggiungere una direttiva `#If` all'inizio del blocco di compilazione condizionale.</span><span class="sxs-lookup"><span data-stu-id="d7755-110">If everything else is in order, add an `#If` directive to the beginning of the conditional compilation block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2a519-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2a519-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d7755-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d7755-111">See also</span></span>
 
-- [<span data-ttu-id="2a519-112">Direttive #If...Then...#Else</span><span class="sxs-lookup"><span data-stu-id="2a519-112">#If...Then...#Else Directives</span></span>](../../visual-basic/language-reference/directives/if-then-else-directives.md)
+- [<span data-ttu-id="d7755-112">#If... Direttive then... #Else</span><span class="sxs-lookup"><span data-stu-id="d7755-112">#If...Then...#Else Directives</span></span>](../language-reference/directives/if-then-else-directives.md)
