--- a/docs/visual-basic/misc/bc30096.md
+++ b/docs/visual-basic/misc/bc30096.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30096
 ms.assetid: 1062a329-9364-4234-9175-4c70a51cb7ae
-ms.openlocfilehash: 51ea98b86fde5a3c682e24e91297f054e02a4af7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4e07513d7042516c71b860d3f22658d572696914
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935798"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370232"
 ---
-# <a name="exit-for-can-only-appear-inside-a-for-statement"></a><span data-ttu-id="728c6-102">'Exit For' può trovarsi solo all'interno di un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="728c6-102">'Exit For' can only appear inside a 'For' statement</span></span>
-<span data-ttu-id="728c6-103">Un'istruzione `Exit For` si verifica al di fuori di un ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="728c6-103">An `Exit For` statement occurs outside a `For` loop.</span></span> <span data-ttu-id="728c6-104">`Exit For` è valido solo tra un'istruzione `For` o `For Each` e un'istruzione `Next` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="728c6-104">`Exit For` is valid only between a `For` or `For Each` statement and a corresponding `Next` statement.</span></span>  
+# <a name="exit-for-can-only-appear-inside-a-for-statement"></a><span data-ttu-id="f16c7-102">'Exit For' può trovarsi solo all'interno di un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="f16c7-102">'Exit For' can only appear inside a 'For' statement</span></span>
+<span data-ttu-id="f16c7-103">Un'istruzione `Exit For` si verifica al di fuori di un ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="f16c7-103">An `Exit For` statement occurs outside a `For` loop.</span></span> <span data-ttu-id="f16c7-104">`Exit For` è valido solo tra un'istruzione `For` o `For Each` e un'istruzione `Next` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="f16c7-104">`Exit For` is valid only between a `For` or `For Each` statement and a corresponding `Next` statement.</span></span>  
   
- <span data-ttu-id="728c6-105">**ID errore:** BC30096</span><span class="sxs-lookup"><span data-stu-id="728c6-105">**Error ID:** BC30096</span></span>  
+ <span data-ttu-id="f16c7-105">**ID errore:** BC30096</span><span class="sxs-lookup"><span data-stu-id="f16c7-105">**Error ID:** BC30096</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="728c6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="728c6-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f16c7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f16c7-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="728c6-107">Verificare che un'istruzione `For` o `For Each` valida preceda `Exit For`e che un'istruzione `Next` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="728c6-107">Make sure a valid `For` or `For Each` statement precedes the `Exit For`, and a valid `Next` statement appears after it.</span></span>  
+1. <span data-ttu-id="f16c7-107">Verificare che un'istruzione `For` o `For Each` valida preceda `Exit For`e che un'istruzione `Next` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="f16c7-107">Make sure a valid `For` or `For Each` statement precedes the `Exit For`, and a valid `Next` statement appears after it.</span></span>  
   
-2. <span data-ttu-id="728c6-108">Verificare che le altre strutture di controllo all'interno del ciclo `For` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="728c6-108">Verify that other control structures within the `For` loop are correctly terminated.</span></span>  
+2. <span data-ttu-id="f16c7-108">Verificare che le altre strutture di controllo all'interno del ciclo `For` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="f16c7-108">Verify that other control structures within the `For` loop are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="728c6-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="728c6-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f16c7-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f16c7-109">See also</span></span>
 
-- [<span data-ttu-id="728c6-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="728c6-110">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="728c6-111">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="728c6-111">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [<span data-ttu-id="f16c7-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="f16c7-110">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="f16c7-111">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="f16c7-111">For Each...Next Statement</span></span>](../language-reference/statements/for-each-next-statement.md)
