--- a/docs/visual-basic/misc/bc30109.md
+++ b/docs/visual-basic/misc/bc30109.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo di classe e non può essere usato come espressione"
+title: "' <typename> ' è un tipo di classe e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30109
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30109
 ms.assetid: 9845a592-2e1d-43fd-b88f-aa6d1b13b1f5
-ms.openlocfilehash: 9f16fbbe5d15332498c40f47a85b119316f810be
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1d3ec4d4d83d32be3ecee3332c13c3f49c3d94a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642647"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366203"
 ---
-# <a name="typename-is-a-class-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="481af-102">'\<nomeTipo >' è un tipo di classe e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="481af-102">'\<typename>' is a class type and cannot be used as an expression</span></span>
-<span data-ttu-id="481af-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="481af-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="481af-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="481af-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
+# <a name="typename-is-a-class-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="2a1fe-102">' \<typename> ' è un tipo di classe e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="2a1fe-102">'\<typename>' is a class type and cannot be used as an expression</span></span>
+<span data-ttu-id="2a1fe-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="2a1fe-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="2a1fe-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="2a1fe-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
   
- <span data-ttu-id="481af-105">**ID errore:** BC30109</span><span class="sxs-lookup"><span data-stu-id="481af-105">**Error ID:** BC30109</span></span>  
+ <span data-ttu-id="2a1fe-105">**ID errore:** BC30109</span><span class="sxs-lookup"><span data-stu-id="2a1fe-105">**Error ID:** BC30109</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="481af-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="481af-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2a1fe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2a1fe-106">To correct this error</span></span>  
   
-- <span data-ttu-id="481af-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="481af-107">Remove the type name and construct the expression using valid elements.</span></span>  
+- <span data-ttu-id="2a1fe-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="2a1fe-107">Remove the type name and construct the expression using valid elements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="481af-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="481af-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2a1fe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2a1fe-108">See also</span></span>
 
-- [<span data-ttu-id="481af-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="481af-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="2a1fe-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="2a1fe-109">Operators and Expressions</span></span>](../programming-guide/language-features/operators-and-expressions/index.md)
