--- a/docs/visual-basic/misc/bc30110.md
+++ b/docs/visual-basic/misc/bc30110.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo di struttura e non può essere usato come espressione"
+title: "' <typename> ' è un tipo di struttura e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30110
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30110
 ms.assetid: 7971ba3a-e5af-4de3-bc3e-80b06f7b30fd
-ms.openlocfilehash: acdaf1c0abdb1a9c347e6a3abbced25c4c18eaa9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4ecad3506b8d1cae983eb892c9255162292f6430
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642679"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366164"
 ---
-# <a name="typename-is-a-structure-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="66e64-102">'\<nomeTipo >' è un tipo di struttura e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="66e64-102">'\<typename>' is a structure type and cannot be used as an expression</span></span>
-<span data-ttu-id="66e64-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="66e64-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="66e64-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="66e64-104">An expression must consist of some combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
+# <a name="typename-is-a-structure-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="f5557-102">' \<typename> ' è un tipo di struttura e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="f5557-102">'\<typename>' is a structure type and cannot be used as an expression</span></span>
+<span data-ttu-id="f5557-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="f5557-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="f5557-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="f5557-104">An expression must consist of some combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
   
- <span data-ttu-id="66e64-105">**ID errore:** BC30110</span><span class="sxs-lookup"><span data-stu-id="66e64-105">**Error ID:** BC30110</span></span>  
+ <span data-ttu-id="f5557-105">**ID errore:** BC30110</span><span class="sxs-lookup"><span data-stu-id="f5557-105">**Error ID:** BC30110</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="66e64-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66e64-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f5557-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5557-106">To correct this error</span></span>  
   
-- <span data-ttu-id="66e64-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="66e64-107">Remove the type name and construct the expression using valid elements.</span></span>  
+- <span data-ttu-id="f5557-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="f5557-107">Remove the type name and construct the expression using valid elements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="66e64-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66e64-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f5557-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5557-108">See also</span></span>
 
-- [<span data-ttu-id="66e64-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="66e64-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="f5557-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="f5557-109">Operators and Expressions</span></span>](../programming-guide/language-features/operators-and-expressions/index.md)
