--- a/docs/visual-basic/misc/bc30582.md
+++ b/docs/visual-basic/misc/bc30582.md
@@ -1,5 +1,5 @@
 ---
-title: L'operando 'SyncLock' non può essere di tipo '<typename>'perché'<typename>' non è un tipo riferimento
+title: L'operando 'SyncLock' non può essere di tipo '<typename>' perché '<typename>' non è un tipo di riferimento
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30582
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30582
 ms.assetid: 953aecf2-629a-4272-94bd-abf88f785e63
-ms.openlocfilehash: 349ee90dcd984b9d6aab3b1f8c2d91a93cacb334
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 023318d62a73679e46b7c09e80b48f65ee5e7ecf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620906"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369946"
 ---
-# <a name="synclock-operand-cannot-be-of-type-typename-because-typename-is-not-a-reference-type"></a><span data-ttu-id="2412a-102">L'operando 'SyncLock' non può essere di tipo '\<nomeTipo >' perché '\<nomeTipo >' non è un tipo riferimento</span><span class="sxs-lookup"><span data-stu-id="2412a-102">'SyncLock' operand cannot be of type '\<typename>' because '\<typename>' is not a reference type</span></span>
-<span data-ttu-id="2412a-103">L'istruzione `SyncLock` consente di sincronizzare le istruzioni in un'unica espressione evitando che più thread eseguano le stesse istruzioni contemporaneamente.</span><span class="sxs-lookup"><span data-stu-id="2412a-103">The `SyncLock` statement allows statements to be synchronized on a single expression by ensuring that multiple threads do not execute the same statements at the same time.</span></span> <span data-ttu-id="2412a-104">Il tipo di espressione in un'istruzione `SyncLock` deve essere un tipo riferimento, ad esempio una classe, un modulo, un'interfaccia, una matrice o un delegato.</span><span class="sxs-lookup"><span data-stu-id="2412a-104">The type of expression in a `SyncLock` statement must be a reference type, such as a class, a module, an interface, an array, or a delegate.</span></span>  
+# <a name="synclock-operand-cannot-be-of-type-typename-because-typename-is-not-a-reference-type"></a><span data-ttu-id="1ae91-102">L'operando 'SyncLock' non può essere di tipo '\<typename>' perché '\<typename>' non è un tipo di riferimento</span><span class="sxs-lookup"><span data-stu-id="1ae91-102">'SyncLock' operand cannot be of type '\<typename>' because '\<typename>' is not a reference type</span></span>
+<span data-ttu-id="1ae91-103">L'istruzione `SyncLock` consente di sincronizzare le istruzioni in un'unica espressione evitando che più thread eseguano le stesse istruzioni contemporaneamente.</span><span class="sxs-lookup"><span data-stu-id="1ae91-103">The `SyncLock` statement allows statements to be synchronized on a single expression by ensuring that multiple threads do not execute the same statements at the same time.</span></span> <span data-ttu-id="1ae91-104">Il tipo di espressione in un'istruzione `SyncLock` deve essere un tipo riferimento, ad esempio una classe, un modulo, un'interfaccia, una matrice o un delegato.</span><span class="sxs-lookup"><span data-stu-id="1ae91-104">The type of expression in a `SyncLock` statement must be a reference type, such as a class, a module, an interface, an array, or a delegate.</span></span>  
   
- <span data-ttu-id="2412a-105">**ID errore:** BC30582</span><span class="sxs-lookup"><span data-stu-id="2412a-105">**Error ID:** BC30582</span></span>  
+ <span data-ttu-id="1ae91-105">**ID errore:** BC30582</span><span class="sxs-lookup"><span data-stu-id="1ae91-105">**Error ID:** BC30582</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2412a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2412a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1ae91-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1ae91-106">To correct this error</span></span>  
   
-- <span data-ttu-id="2412a-107">Modificare il tipo in un tipo riferimento appropriato.</span><span class="sxs-lookup"><span data-stu-id="2412a-107">Change the type to an appropriate reference type.</span></span>  
+- <span data-ttu-id="1ae91-107">Modificare il tipo in un tipo riferimento appropriato.</span><span class="sxs-lookup"><span data-stu-id="1ae91-107">Change the type to an appropriate reference type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2412a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2412a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1ae91-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1ae91-108">See also</span></span>
 
-- [<span data-ttu-id="2412a-109">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="2412a-109">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [<span data-ttu-id="1ae91-109">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="1ae91-109">SyncLock Statement</span></span>](../language-reference/statements/synclock-statement.md)
