--- a/docs/visual-basic/misc/bc30593.md
+++ b/docs/visual-basic/misc/bc30593.md
@@ -1,5 +1,5 @@
 ---
-title: Le variabili nei moduli non possono essere dichiarate '<specifier>'
+title: Le variabili nei moduli non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30593
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30593
 ms.assetid: 2500b776-7fa4-4272-8cc7-204593706651
-ms.openlocfilehash: 8a0ba37d3b1f1a4bb115d9f2d427b65ca65751e3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 914fd8a2c64de6cea5aedbaf0908781173ebe391
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369673"
 ---
-# <a name="variables-in-modules-cannot-be-declared-specifier"></a><span data-ttu-id="c7b13-102">Le variabili nei moduli non possono essere dichiarate '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="c7b13-102">Variables in Modules cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="c7b13-103">È stato usato un identificatore, ad esempio `MustInherit`, in una variabile di un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="c7b13-103">You have used a specifier, such as `MustInherit`, on a variable in a `Module` statement.</span></span> <span data-ttu-id="c7b13-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="c7b13-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
+# <a name="variables-in-modules-cannot-be-declared-specifier"></a><span data-ttu-id="600c6-102">Le variabili nei moduli non possono essere dichiarate ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="600c6-102">Variables in Modules cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="600c6-103">È stato usato un identificatore, ad esempio `MustInherit`, in una variabile di un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="600c6-103">You have used a specifier, such as `MustInherit`, on a variable in a `Module` statement.</span></span> <span data-ttu-id="600c6-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="600c6-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="c7b13-105">**ID errore:** BC30593</span><span class="sxs-lookup"><span data-stu-id="c7b13-105">**Error ID:** BC30593</span></span>  
+ <span data-ttu-id="600c6-105">**ID errore:** BC30593</span><span class="sxs-lookup"><span data-stu-id="600c6-105">**Error ID:** BC30593</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c7b13-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c7b13-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="600c6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="600c6-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c7b13-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="c7b13-107">Remove the specifier.</span></span>  
+- <span data-ttu-id="600c6-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="600c6-107">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c7b13-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c7b13-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="600c6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="600c6-108">See also</span></span>
 
-- [<span data-ttu-id="c7b13-109">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="c7b13-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="600c6-109">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="600c6-109">Module Statement</span></span>](../language-reference/statements/module-statement.md)
