--- a/docs/visual-basic/misc/bc31129.md
+++ b/docs/visual-basic/misc/bc31129.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31129
 ms.assetid: 6e5c89fc-ca1d-4e8f-bf04-8af3e8b03a4b
-ms.openlocfilehash: 228238075f3c0e173a9489005fd920ffce12f05d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 387c3f2c55277a76b473040542b4ae04468cf3e2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585275"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366021"
 ---
-# <a name="raiseevent-is-already-declared"></a><span data-ttu-id="cfd72-102">'RaiseEvent' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="cfd72-102">'RaiseEvent' is already declared</span></span>
-<span data-ttu-id="cfd72-103">In una dichiarazione di evento personalizzata sono visualizzate più dichiarazioni `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="cfd72-103">More than one `RaiseEvent` declaration appeared in a custom event declaration.</span></span> <span data-ttu-id="cfd72-104">Una dichiarazione `RaiseEvent` dichiara una routine usata per generare l'evento.</span><span class="sxs-lookup"><span data-stu-id="cfd72-104">A `RaiseEvent` declaration declares a procedure used to raise the event.</span></span>  
+# <a name="raiseevent-is-already-declared"></a><span data-ttu-id="af7c2-102">'RaiseEvent' è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="af7c2-102">'RaiseEvent' is already declared</span></span>
+<span data-ttu-id="af7c2-103">In una dichiarazione di evento personalizzata sono visualizzate più dichiarazioni `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="af7c2-103">More than one `RaiseEvent` declaration appeared in a custom event declaration.</span></span> <span data-ttu-id="af7c2-104">Una dichiarazione `RaiseEvent` dichiara una routine usata per generare l'evento.</span><span class="sxs-lookup"><span data-stu-id="af7c2-104">A `RaiseEvent` declaration declares a procedure used to raise the event.</span></span>  
   
- <span data-ttu-id="cfd72-105">**ID errore:** BC31129</span><span class="sxs-lookup"><span data-stu-id="cfd72-105">**Error ID:** BC31129</span></span>  
+ <span data-ttu-id="af7c2-105">**ID errore:** BC31129</span><span class="sxs-lookup"><span data-stu-id="af7c2-105">**Error ID:** BC31129</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cfd72-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cfd72-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="af7c2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="af7c2-106">To correct this error</span></span>  
   
-- <span data-ttu-id="cfd72-107">Rimuovere l'istruzione `RaiseEvent` ridondante.</span><span class="sxs-lookup"><span data-stu-id="cfd72-107">Remove the redundant `RaiseEvent` statement.</span></span>  
+- <span data-ttu-id="af7c2-107">Rimuovere l'istruzione `RaiseEvent` ridondante.</span><span class="sxs-lookup"><span data-stu-id="af7c2-107">Remove the redundant `RaiseEvent` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cfd72-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cfd72-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="af7c2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="af7c2-108">See also</span></span>
 
-- [<span data-ttu-id="cfd72-109">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="cfd72-109">RaiseEvent Statement</span></span>](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="cfd72-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="cfd72-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="af7c2-109">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="af7c2-109">RaiseEvent Statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="af7c2-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="af7c2-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
