--- a/docs/visual-basic/misc/bc32021.md
+++ b/docs/visual-basic/misc/bc32021.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro ' <parametername>' in ' <methodname>' ha già un argomento omesso corrispondente
+title: Il parametro '<parametername>' in '<methodname>' contiene già un argomento omesso corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32021
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32021
 ms.assetid: f51d29ba-c5b3-4731-a426-4c5ba11b4e1f
-ms.openlocfilehash: 1a4e386d52d7f1699f8740d2044285f1d67f99d1
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 7aab1c62aa772ea28fc572daadc313cf4b3b3375
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352293"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365800"
 ---
-# <a name="parameter-parametername-in-methodname-already-has-a-matching-omitted-argument"></a><span data-ttu-id="67ad4-102">Il parametro ' \<parametername >' in ' \<methodname >' ha già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="67ad4-102">Parameter '\<parametername>' in '\<methodname>' already has a matching omitted argument</span></span>
-<span data-ttu-id="67ad4-103">Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione. Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="67ad4-103">A procedure call supplies an argument by name after omitting the same argument by position; for example:</span></span>  
+# <a name="parameter-parametername-in-methodname-already-has-a-matching-omitted-argument"></a><span data-ttu-id="46683-102">Il parametro '\<parametername>' in '\<methodname>' contiene già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="46683-102">Parameter '\<parametername>' in '\<methodname>' already has a matching omitted argument</span></span>
+<span data-ttu-id="46683-103">Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione. Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="46683-103">A procedure call supplies an argument by name after omitting the same argument by position; for example:</span></span>  
   
 ```vb  
 Public Sub ABC(ByVal X As Byte, Optional ByVal Y As Byte = 0, _  
@@ -24,12 +24,12 @@ Public Sub ABC(ByVal X As Byte, Optional ByVal Y As Byte = 0, _
 Call ABC(6, , Y:=3)   ' Argument Y omitted by position, supplied by name.  
 ```  
   
- <span data-ttu-id="67ad4-104">**ID errore:** BC32021</span><span class="sxs-lookup"><span data-stu-id="67ad4-104">**Error ID:** BC32021</span></span>  
+ <span data-ttu-id="46683-104">**ID errore:** BC32021</span><span class="sxs-lookup"><span data-stu-id="46683-104">**Error ID:** BC32021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="67ad4-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="67ad4-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="46683-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="46683-105">To correct this error</span></span>  
   
-- <span data-ttu-id="67ad4-106">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="67ad4-106">Supply the argument by position, or remove the comma that omits it.</span></span>  
+- <span data-ttu-id="46683-106">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="46683-106">Supply the argument by position, or remove the comma that omits it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="67ad4-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="67ad4-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="46683-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="46683-107">See also</span></span>
 
-- [<span data-ttu-id="67ad4-108">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="67ad4-108">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="46683-108">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="46683-108">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
