--- a/docs/visual-basic/misc/bc36809.md
+++ b/docs/visual-basic/misc/bc36809.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36809
 ms.assetid: 560a3370-f24d-4ca3-93b1-39aabe13c238
-ms.openlocfilehash: 3ceebfa04420545db28a9e685643762abe65fc9e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cb00cf8507a9111ee1e5575c6714040c013f5d22
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614459"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369399"
 ---
-# <a name="xml-descendant-elements-cannot-be-selected-from-type-type"></a><span data-ttu-id="4fe84-102">Non è possibile selezionare elementi discendenti XML dal tipo 'type'</span><span class="sxs-lookup"><span data-stu-id="4fe84-102">XML descendant elements cannot be selected from type 'type'</span></span>
-<span data-ttu-id="4fe84-103">È stato fatto riferimento a un elemento discendente XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="4fe84-103">An XML descendant has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="4fe84-104">Per altre informazioni, vedere [XML Descendant Axis Property](../../visual-basic/language-reference/xml-axis/xml-descendant-axis-property.md).</span><span class="sxs-lookup"><span data-stu-id="4fe84-104">For more information, see [XML Descendant Axis Property](../../visual-basic/language-reference/xml-axis/xml-descendant-axis-property.md).</span></span>  
+# <a name="xml-descendant-elements-cannot-be-selected-from-type-type"></a><span data-ttu-id="e97ba-102">Non è possibile selezionare elementi discendenti XML dal tipo 'type'</span><span class="sxs-lookup"><span data-stu-id="e97ba-102">XML descendant elements cannot be selected from type 'type'</span></span>
+<span data-ttu-id="e97ba-103">È stato fatto riferimento a un elemento discendente XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="e97ba-103">An XML descendant has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="e97ba-104">Per altre informazioni, vedere [XML Descendant Axis Property](../language-reference/xml-axis/xml-descendant-axis-property.md).</span><span class="sxs-lookup"><span data-stu-id="e97ba-104">For more information, see [XML Descendant Axis Property](../language-reference/xml-axis/xml-descendant-axis-property.md).</span></span>  
   
 ```vb  
 ' Generates an error.  
 Dim var = "sample text"...<childElement>  
 ```  
   
- <span data-ttu-id="4fe84-105">**ID errore:** BC36809</span><span class="sxs-lookup"><span data-stu-id="4fe84-105">**Error ID:** BC36809</span></span>  
+ <span data-ttu-id="e97ba-105">**ID errore:** BC36809</span><span class="sxs-lookup"><span data-stu-id="e97ba-105">**Error ID:** BC36809</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4fe84-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4fe84-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e97ba-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e97ba-106">To correct this error</span></span>  
   
-- <span data-ttu-id="4fe84-107">Se si fa riferimento a un elemento discendente di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="4fe84-107">Ensure that the object of which you are referencing a descendant element is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="4fe84-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="4fe84-108">Following is an example:</span></span>  
+- <span data-ttu-id="e97ba-107">Se si fa riferimento a un elemento discendente di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="e97ba-107">Ensure that the object of which you are referencing a descendant element is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="e97ba-108">Di seguito è illustrato un esempio:</span><span class="sxs-lookup"><span data-stu-id="e97ba-108">Following is an example:</span></span>  
   
 ```vb  
 Dim elem As XElement = <root>  
@@ -35,8 +35,8 @@ Dim elem As XElement = <root>
 Dim var = elem...<child>  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="4fe84-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4fe84-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e97ba-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e97ba-109">See also</span></span>
 
-- [<span data-ttu-id="4fe84-110">Proprietà axis descendant XML</span><span class="sxs-lookup"><span data-stu-id="4fe84-110">XML Descendant Axis Property</span></span>](../../visual-basic/language-reference/xml-axis/xml-descendant-axis-property.md)
-- [<span data-ttu-id="4fe84-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="4fe84-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)
-- [<span data-ttu-id="4fe84-112">XML</span><span class="sxs-lookup"><span data-stu-id="4fe84-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="e97ba-110">XML Descendant Axis Property</span><span class="sxs-lookup"><span data-stu-id="e97ba-110">XML Descendant Axis Property</span></span>](../language-reference/xml-axis/xml-descendant-axis-property.md)
+- [<span data-ttu-id="e97ba-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="e97ba-111">XML Axis Properties</span></span>](../language-reference/xml-axis/index.md)
+- [<span data-ttu-id="e97ba-112">XML</span><span class="sxs-lookup"><span data-stu-id="e97ba-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
