commit translated contents

--- a/docs/visual-basic/misc/bc30791.md
+++ b/docs/visual-basic/misc/bc30791.md
@@ -1,5 +1,5 @@
 ---
-title: "'Declare' istruzioni in una struttura non possono essere dichiarate come '<specifier>'"
+title: Le istruzioni ' Declare ' in una struttura non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30791
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30791
 ms.assetid: 714d8088-c885-40ce-ab4c-fde296fe23ec
-ms.openlocfilehash: 17a46dcc90ba1bff229921b81f3b81fe0292655a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2bd9d3e3f933b2cfe51e6c033fc13ad9424f0bcd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589592"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389371"
 ---
-# <a name="declare-statements-in-a-structure-cannot-be-declared-specifier"></a>'Declare' istruzioni in una struttura non possono essere dichiarate come '\<identificatore >'
+# <a name="declare-statements-in-a-structure-cannot-be-declared-specifier"></a>Le istruzioni ' Declare ' in una struttura non possono essere dichiarate ' \<specifier> '
 Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Structure` .  
   
  **ID errore:** BC30791  
@@ -25,5 +25,5 @@ Una dichiarazione `Declare` contiene un identificatore che non è valido all'int
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
