--- a/docs/visual-basic/misc/bc2015.md
+++ b/docs/visual-basic/misc/bc2015.md
@@ -1,5 +1,5 @@
 ---
-title: Il file '<filename>' non è un file di testo
+title: Il file '<filename>' non è un file di testo.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2015
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2015
 ms.assetid: 838cd00c-43ee-48d1-8a0d-5e1d5122ec9d
-ms.openlocfilehash: 662733f0a6cccb9897de6890c623749325dfb5ae
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a92a018b532673ed398ebf8f1e2f8dbc202a6407
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658651"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367075"
 ---
-# <a name="the-file-filename-is-not-a-text-file"></a>Il file '\<nomefile >' non è un file di testo
+# <a name="the-file-filename-is-not-a-text-file"></a>Il file '\<filename>' non è un file di testo.
 Il file specificato non può essere scritto perché è un file binario.  
   
  **ID errore:** BC2015  
@@ -25,7 +25,7 @@ Il file specificato non può essere scritto perché è un file binario.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Scrittura su file](../../visual-basic/developing-apps/programming/drives-directories-files/writing-to-files.md)
-- [Procedura: Analizzare percorsi di file](../../visual-basic/developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
-- [My.Computer.FileSystem.WriteAllText](xref:Microsoft.VisualBasic.FileIO.FileSystem.WriteAllText%2A)
-- [My.Computer.FileSystem.WriteAllBytes](xref:Microsoft.VisualBasic.MyServices.FileSystemProxy.WriteAllBytes%2A)
+- [Scrittura in file](../developing-apps/programming/drives-directories-files/writing-to-files.md)
+- [Procedura: Analizzare percorsi di file](../developing-apps/programming/drives-directories-files/how-to-parse-file-paths.md)
+- [My. computer. FileSystem. WriteAllText](xref:Microsoft.VisualBasic.FileIO.FileSystem.WriteAllText%2A)
+- [My. computer. FileSystem. WriteAllBytes](xref:Microsoft.VisualBasic.MyServices.FileSystemProxy.WriteAllBytes%2A)
