--- a/docs/visual-basic/misc/bc30563.md
+++ b/docs/visual-basic/misc/bc30563.md
@@ -1,5 +1,5 @@
 ---
-title: "'<name>'è ambiguo negli oggetti applicazione'<list>'"
+title: "' <name> ' è ambiguo negli oggetti applicazione '<list>'"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30563
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30563
 ms.assetid: 965c1570-6297-47b5-b41e-e2dd68b034f0
-ms.openlocfilehash: 0b07ab4a0b27c2eb1ef17ba72b2d7ceaa90b7a3e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6c26b18d27f21c61b745b899f83322e6b861945b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620569"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390097"
 ---
-# <a name="name-is-ambiguous-in-the-application-objects-list"></a>«\<nome >' è ambiguo negli oggetti applicazione\<elenco >»
-È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente. L'elenco fornito nei dettagli del messaggio di errore indica gli oggetti dell'applicazione in cui il nome è ambiguo.  
+# <a name="name-is-ambiguous-in-the-application-objects-list"></a>' \<name> ' è ambiguo negli oggetti applicazione ' \<list> '
+È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome. Il compilatore Visual Basic non dispone di alcuna regola di risoluzione dei conflitti; è necessario evitare di ambiguare i nomi. L'elenco fornito nei dettagli del messaggio di errore indica gli oggetti dell'applicazione in cui il nome è ambiguo.  
   
  **ID errore:** BC30563  
   
@@ -25,4 +25,4 @@ ms.locfileid: "64620569"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Namespace](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [Istruzione Namespace](../language-reference/statements/namespace-statement.md)
