--- a/docs/visual-basic/misc/bc30579.md
+++ b/docs/visual-basic/misc/bc30579.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30579
 ms.assetid: 8d658008-eddc-4b7d-a8d4-036da42957bf
-ms.openlocfilehash: 913959b981c820c6f9fa181a0b813e6112abcebc
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8f2e1f7d54ce239ed8f56644c8d7c01138cd02ba
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667245"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370154"
 ---
 # <a name="externalsource-statement-must-end-with-a-matching-end-externalsource"></a>L'istruzione '#ExternalSource' deve terminare con un '#End ExternalSource' corrispondente
 La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice. Un blocco `#ExternalSource` deve iniziare con `#ExternalSource` e terminare con `#End ExternalSource`.  
@@ -27,5 +27,5 @@ La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttiva #ExternalSource](../../visual-basic/language-reference/directives/externalsource-directive.md)
+- [#ExternalSource (direttiva)](../language-reference/directives/externalsource-directive.md)
 - [Compilazione condizionale in Visual Basic](../programming-guide/program-structure/conditional-compilation.md)
