--- a/docs/visual-basic/misc/bc31516.md
+++ b/docs/visual-basic/misc/bc31516.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non può essere usato come attributo perché non è dichiarato 'Public'
+title: Il tipo '<typename>' non può essere usato come attributo perché non è dichiarato come 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31516
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31516
 ms.assetid: ec659779-c850-48b5-a585-68ea84cff536
-ms.openlocfilehash: d5f60711c8641cf8876fccb5feb9fc697fac5a0e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3da0680a29e30356ab4e4d645217cff870b020f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61789155"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365943"
 ---
-# <a name="type-typename-cannot-be-used-as-an-attribute-because-it-is-not-declared-public"></a>Tipo '\<nomeTipo >' non può essere usato come attributo perché non è dichiarato 'Public'
+# <a name="type-typename-cannot-be-used-as-an-attribute-because-it-is-not-declared-public"></a>Il tipo '\<typename>' non può essere usato come attributo perché non è dichiarato come 'Public'
 Gli attributi devono essere pubblici.  
   
  **ID errore:** BC31516  
@@ -25,4 +25,4 @@ Gli attributi devono essere pubblici.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Pubblica](../language-reference/modifiers/public.md)
