--- a/docs/visual-basic/misc/bc32080.md
+++ b/docs/visual-basic/misc/bc32080.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32080
 ms.assetid: 88c62a1c-aee3-46b2-ad78-76790022c04c
-ms.openlocfilehash: 0d7ca52f718117f8c267a1f4bf55eb63729a1973
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2bc7198b3581ef5d2f4c8ddbb525de71cfdce63a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667515"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365514"
 ---
 # <a name="generic-methods-cannot-use-handles-clause"></a>I metodi generici non possono utilizzare la clausola 'Handles'
-Una routine `Sub` generica comprende una clausola [Handles](../../visual-basic/language-reference/statements/handles-clause.md) nella sua dichiarazione.  
+Una routine `Sub` generica comprende una clausola [Handles](../language-reference/statements/handles-clause.md) nella sua dichiarazione.  
   
- La clausola `Handles` specifica un elenco di eventi gestiti dalla routine `Sub` . Per poter fungere da gestore eventi, la routine `Sub` deve avere la stessa firma di ciascun evento che deve gestire. Una routine generica può essere creata più di una volta, con firme che Visual Basic non è in grado di stimare in fase di compilazione. Pertanto, Visual Basic non è in grado di garantire la firma corrispondente a quelle degli `Handles` eventi nella clausola.  
+ La clausola `Handles` specifica un elenco di eventi gestiti dalla routine `Sub` . Per poter fungere da gestore eventi, la routine `Sub` deve avere la stessa firma di ciascun evento che deve gestire. Una routine generica può essere creata più di una volta, con firme che Visual Basic non è in grado di stimare in fase di compilazione. Pertanto, Visual Basic non è in grado di garantire la firma corrispondente a quelle degli eventi nella `Handles` clausola.  
   
  **ID errore:** BC32080  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se la routine `Sub` deve essere generica, rimuovere la clausola `Handles` dalla sua dichiarazione. Usare l' [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) per associare questo gestore eventi a un evento.  
+- Se la routine `Sub` deve essere generica, rimuovere la clausola `Handles` dalla sua dichiarazione. Usare l' [AddHandler Statement](../language-reference/statements/addhandler-statement.md) per associare questo gestore eventi a un evento.  
   
-- Se la routine `Sub` deve usare la clausola `Handles` per associare gli eventi, rimuovere la clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) dalla sua dichiarazione. Con `Handles`è necessario usare una routine non generica.  
+- Se la routine `Sub` deve usare la clausola `Handles` per associare gli eventi, rimuovere la clausola [Of](../language-reference/statements/of-clause.md) dalla sua dichiarazione. Con `Handles`è necessario usare una routine non generica.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
 - [Eventi (Visual Basic)](../programming-guide/language-features/events/index.md)
