--- a/docs/visual-basic/misc/bc32097.md
+++ b/docs/visual-basic/misc/bc32097.md
@@ -1,5 +1,5 @@
 ---
-title: Operando 'IsNot' del tipo '<typeparametername>' è possibile confrontare solo con 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
+title: È possibile confrontare l'operando 'IsNot' del tipo '<typeparametername>' solo a 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32097
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32097
 ms.assetid: 50283a4b-70e3-4e59-9b9b-65e7cacf5ce1
-ms.openlocfilehash: 04ac3872d8ded8420495beda67d85f2f657ab2dc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0110745b421d8b410e8705c4d01b2ca64ce52adc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618534"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365255"
 ---
-# <a name="isnot-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a>Operando 'IsNot' del tipo '\<nomeparametrotipo >' è possibile confrontare solo con 'Nothing' perché '\<nomeparametrotipo >' è un parametro di tipo senza vincoli di classe
-Un parametro di tipo viene usato come operando per [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) o un nome della classe specifico nell'elenco di vincoli.  
+# <a name="isnot-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a>È possibile confrontare l'operando 'IsNot' del tipo '\<typeparametername>' solo a 'Nothing' perché '\<typeparametername>' è un parametro di tipo senza vincoli di classe
+Un parametro di tipo viene usato come operando per [IsNot Operator](../language-reference/operators/isnot-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../language-reference/statements/class-statement.md) o un nome della classe specifico nell'elenco di vincoli.  
   
- `IsNot` confronta due tipi riferimento per determinare se puntano a istanze di oggetti diversi in memoria. Non può accettare un operando che non è un tipo riferimento, a meno che l'altro operando [Nothing](../../visual-basic/language-reference/nothing.md).  
+ `IsNot` confronta due tipi riferimento per determinare se puntano a istanze di oggetti diversi in memoria. Non può assumere un operando che non è un tipo di riferimento, a meno che l'altro operando non sia [null](../language-reference/nothing.md).  
   
  **ID errore:** BC32097  
   
@@ -29,7 +29,7 @@ Un parametro di tipo viene usato come operando per [IsNot Operator](../../visual
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
