--- a/docs/visual-basic/misc/bc36907.md
+++ b/docs/visual-basic/misc/bc36907.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo di estensione '<methodname>'definito '<modulename>' non è generico (o ha parametri di tipo gratuito) e quindi non può avere argomenti tipo
+title: Il metodo di estensione '<methodname>' definito in '<modulename>' non è generico o non ha parametri di tipo disponibili e quindi non può avere argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc36907
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36907
 ms.assetid: 45191e93-89d1-48ec-99a5-ff9661a2a6ee
-ms.openlocfilehash: 3ac8cd04a4b38829b9ff7a77c76384e1a880e57e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ad9364a354b2afadc17282e6418d7141c57f7380
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64614451"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369389"
 ---
-# <a name="extension-method-methodname-defined-in-modulename-is-not-generic-or-has-no-free-type-parameters-and-so-cannot-have-type-arguments"></a>Metodo di estensione '\<NomeMetodo >' definito in '\<NomeModulo >' non generico (o ha parametri di tipo gratuito) e quindi non può avere argomenti tipo
+# <a name="extension-method-methodname-defined-in-modulename-is-not-generic-or-has-no-free-type-parameters-and-so-cannot-have-type-arguments"></a>Il metodo di estensione '\<methodname>' definito in '\<modulename>' non è generico o non ha parametri di tipo disponibili e quindi non può avere argomenti di tipo
 È stato specificato un argomento di tipo in una chiamata a un metodo di estensione che è privo di parametri generici o non ha parametri generici per cui è non è già specificato un tipo. Il codice seguente, ad esempio, causa questo errore.  
   
 ```vb  
@@ -42,5 +42,5 @@ Dim str = "hi"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
